Bug 1676474 - Disable webrender partial present on Mali-Gxx. r=aosmond, a=RyanVM

Due to rendering issues reported on a Mali-G77, disable partial
present on all Mali-Gxx devices.

Differential Revision: https://phabricator.services.mozilla.com/D99216